--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.0.15</version>
+        </dependency>
+        
         <!-- Jackson -->
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
@@ -40,13 +46,31 @@
             <version>15.0-rc1</version>
         </dependency>
         
-        <!-- servlet3 -->
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>3.0.1</version>
-            <scope>provided</scope>
-        </dependency>
+     <!-- servlet3 -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet.jsp</groupId>
+			<artifactId>jsp-api</artifactId>
+			<version>2.1</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+        		<groupId>tomcat</groupId>
+        		<artifactId>jasper-compiler</artifactId>
+        		<version>5.5.23</version>
+        		<scope>provided</scope>
+        	</dependency>
+        	<dependency>
+        		<groupId>tomcat</groupId>
+        		<artifactId>jasper-runtime</artifactId>
+        		<version>5.5.23</version>
+        		<scope>provided</scope>
+        	</dependency>
         
         <!-- cxf -->
         <dependency>
