1. 添加pure的修改； 2. 添加文件查看、运行WordCount MR任务功能；

--- a/pom.xml
+++ b/pom.xml
@@ -366,6 +366,11 @@
             <artifactId>hadoop-mapreduce-client-jobclient</artifactId>
             <version>${hadoop.version}</version>
         </dependency>
+         <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-mapreduce-examples</artifactId>
+            <version>${hadoop.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>ssh</finalName>
