--- a/src/main/resources/util.properties
+++ b/src/main/resources/util.properties
@@ -1,7 +1,6 @@
 # hadoop constant
-mapreduce.app-submission.cross-platform=true  
-fs.defaultFS=hdfs://node101:8020     
-mapreduce.framework.name=yarn  
-yarn.resourcemanager.address=node101:8032  
+mapreduce.app-submission.cross-platform=true
+fs.defaultFS=hdfs\://node101\:8020
+mapreduce.framework.name=yarn
+yarn.resourcemanager.address=node101\:8032
 yarn.resourcemanager.scheduler.address=node101:8030
-
